[package]
name = "rnasamba"
version = "0.2.4"
authors = ["Antonio Camargo <antoniop.camargo@gmail.com>"]
edition = "2018"

[lib]
name = "rnasamba"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.8.2"
ndarray = "0.13.0"
numpy = "0.7.0"
rayon = "1.2.1"
regex = "1.3.1"

[dependencies.pyo3]
version = "0.8.3"
features = ["extension-module"]