[package]
name = "rnasamba"
version = "0.2.5"
authors = ["Antonio Camargo <antoniop.camargo@gmail.com>"]
edition = "2018"

[lib]
name = "rnasamba"
crate-type = ["cdylib"]

[dependencies]
itertools = "0.8.2"
ndarray = "0.13.1"
numpy = "0.12.2"
pyo3 = { version = "0.12.4", features = ["extension-module"] }
rayon = "1.2.1"
regex = "1.3.1"